--- a/config-center-web/package.json
+++ b/config-center-web/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "animate.css": "3.5.2",
-    "axios": "^0.16.2",
+    "axios": ">=0.18.1"
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
